# inscribe-flash

./: .dockerignore  .gitignore  .gitmodules  .prettierrc.js  Dockerfile  Justfile  README.md  package-lock.json  package.json  postcss.config.js  tailwind.config.js  vue.config.js
.github/workflows/: dfu-util.yml  main.yml
src/: App.vue  main.ts  styles.css  utils.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: dfu_util.rs  flash.rs  lib.rs  main.rs  progress_lines.rs  winusb.rs
src/components/: AboutApp.vue  DeviceList.vue  DriversInstall.vue  FileDropArea.vue  FileUpload.vue  FirmwareSelect.vue  ProgressBar.vue
src/stores/: devices.ts  firmware.ts
udev-rules/: 40-inscribio-keyboard.rules
utils/: bump-version.sh  docker.sh  prepare-macos-app.sh  release.sh
