[package]
name = "app"
version = "1.2.1"
description = "Uploade keyboard firmware over USB"
authors = ["Jędrzej Boczar"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.3", features = ["dialog-all", "fs-read-file", "path-all", "process-command-api", "protocol-asset", "shell-open"] }
thiserror = "1.0"
regex = "1.8"
tempfile = "3.5"
tokio = "1.28"
env_logger = "0.10"
log = "0.4"

[target.'cfg(windows)'.dependencies]
winusb-installer = { git = "https://github.com/inscribio/winusb-installer", tag = "v0.1.2" }

[dev-dependencies]
anyhow = "1.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
